<resources>
    <string name="app_name">Tasks</string>
    <string name="look_up_word" translatable="false">Look up</string>
    <string name="item_text" translatable="false">Id: %d %s</string>
    <string name="edit">Edit</string>
    <string name="press">Press</string>
    <string name="to_add_a_task">to add a task</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="_8942" translatable="false">⋮</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_task_question">Do you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_channel_description">Reminds you of tasks whenever it reaches the set date</string>
    <string name="notification_channel_name">Task Reminder</string>
    <string name="undo_delete_task" translatable="false">Undo delete task?</string>
    <string name="undo" translatable="false">UNDO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="restore">Restore</string>
    <string name="complete">Complete</string>

    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>
    <string name="location">Location</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="don_t_sort">Don\'t sort</string>
    <string name="search">Search</string>
    <string name="add_task_instruction">Press + to add a Task</string>
    <string name="no_matches">No matches</string>
    <string name="priority">Priority</string>
    <string name="low_priority">Low priority</string>
        <string name="medium_priority">Medium priority</string>
        <string name="high_priority">High priority</string>
    <string name="sort_by_priority">Sort by priority</string>
</resources>